@@ -105,6 +105,31 @@ metric `catalyst.stats.foo.bar.time`.
 
 The metric name is generated by ["statsd\_metric\_name\_filter"](#statsd_metric_name_filter).
 
+# KNOWN ISSUES
+
+## Custom Profiling Points
+
+If you have custom profiling points, then these will be treated as
+top-level names in the `catalyst.stats.*` namespaces, e.g.
+
+```perl
+my $stats = $c->stats;
+$stats->profile( begin => 'here' );
+
+...
+
+$stats->profile( end => 'here' );
+```
+
+will be logged to statsd in the `statlyst.stats.here.time` namespace.
+
+If you do not want this, then you can work around this by prefixing
+the block name with a controller name, e.g.
+
+```perl
+$stats->profile( begin => 'controller.here' );
+```
+
 # SEE ALSO
 
 - [Catalyst::Stats](https://metacpan.org/pod/Catalyst::Stats)
