@@ -1,6 +1,8 @@
 Revision history for Catalyst-Plugin-Statsd.
 
 {{$NEXT}}
+  [Documentation]
+  - Documented known issue with custom profiling points.
 
 v0.5.0    2018-12-03 17:39:30+00:00 Europe/London
   [Enhancements]
